fix(mail): harden worker launch and message admission
Use the host-selected Java 25+ runtime in the launcher and sandbox. Reject expired sealed-message retries without changing ciphertext, and enforce both contact validity windows before recipient admission.

Contain malformed command payloads within bounded replies so the worker remains available. Add launcher, parser, real-process, expiry, and replay-state regression coverage and document the behavior.